added a reset button

--- a/src/EightBall.css
+++ b/src/EightBall.css
@@ -10,3 +10,7 @@
         align-items: center;
         font: 35px Arial, sans-serif;
 }
+.EightBall-reset {
+    padding-left: 20px;
+    text-align: left;
+}
